tools.yaml
apiVersion: v1
kind: Pod
metadata:
  name: tools
  labels:
    app: tools
spec:
  containers:
  - name: tools
    image: ubuntu
    resources: {}
    command: ["/bin/bash"]
    args: ["-c", "while true; do echo 'busybox running'; sleep 10;done"]
