nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx-deployment
  template:
    metadata:
      labels:
        app: nginx-deployment
    spec:
      containers:
        - name: nginx-deployment
          # image của container docker
          image: nginx
          ports:
            # port bên trong container
            - containerPort: 8080
---
apiVersion: v1
# kind là loại Service
kind: Service
metadata:
  name: nginx-svc
spec:
  ports:
    # port bên ngoài của pods mà các pods có thể giao tiếp được với nhau
    - port: 80
      # port target với 8080 của deployment
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    # dựa theo app : nginx-deployment ở labels trên kia sẽ map với service này
    app: nginx-deployment
  type: ClusterIP
