svc1.yaml
kind: Service
apiVersion: v1
metadata:
  name:  svc1
spec:
  # selector:
  #   app:  Selector Label
  # type:  LoadBalancer | ClusterIP | NodePort
  type: ClusterIP
  ports:
  - port:  80
    targetPort:  80
