app-test-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-app
  namespace: ingress-controller
spec:
  rules:
  - host: "foo.hcmjs.xyz"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: http-test-svc
            port:
              number: 80
