ingress-test.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-app
spec:
  tls:
    - hosts:
      - k8s.com
      secretName: k8s.com
  rules:
  - host: k8s.com
    http:
      paths:
      - pathType: ImplementationSpecific
        path: "/"
        backend:
          service:
            name: http-test-svc
            port:
              number: 80
